[gd_scene load_steps=3 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Setup.gd" type="Script" id=2]

[node name="Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setup_Screen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.68182
margin_right = 1.68188
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="Setup_Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -64.0
margin_right = -18.5
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="Setup_Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -64.0
margin_right = 272.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_address" type="LineEdit" parent="Setup_Screen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -383.682
margin_right = 380.318
margin_bottom = 132.0
custom_fonts/font = ExtResource( 1 )
text = "PuT Ip Here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -397.0
margin_top = -80.0
margin_right = 402.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Setup_Screen/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Setup_Screen/join" to="." method="_on_join_pressed"]
